Added additional pages to tabs
Making the website more functional.

--- a/layout1.html
+++ b/layout1.html
@@ -11,8 +11,8 @@
             <td><h1>Practicing Layouts 1</h1></td>
             <td>
             <nav style="margin-left:55px">
-                <a href="#">Services</a>
-                <a href="#">About Us</a>
+                <a href="/Services.html">Services</a>
+                <a href="/About.html">About Us</a>
                 <a href="#">Numbers</a>
                 <a href="#">Gallery</a>
                 <a href="#">Work with us</a>
